Add biomes visualization

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
-trees.png
+maps/*
+spec/test_data/export.json
+spec/test_data/real_scene_medium.json
+spec/test_data/real_scene_very_large.json
+spec/test_data/real_scene_small.json
+spec/test_data/real_scene.json
