Update gem spec files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ spec/test_data/real_scene_medium.json
 spec/test_data/real_scene_very_large.json
 spec/test_data/real_scene_small.json
 spec/test_data/real_scene.json
+map_visualizer-1.0.0.gem
